<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_insurance_amount"
        android:importantForAccessibility="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_insurance_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/insurance_text"
        app:layout_constraintBottom_toBottomOf="@+id/insurance_text">
    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insurance_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="80dp"
        android:hint="@string/enter_amount"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insurance_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            >
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_insurance_question"
        android:importantForAccessibility="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_insurance_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/insurance_question"
        app:layout_constraintBottom_toBottomOf="@+id/insurance_question">
    </ImageView>

    <TextView
        android:id="@+id/insurance_question"
        style="@style/Widget.InsuranceCalculator.TextView"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_long_have_you_been_using_our_services"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="@+id/icon_insurance_question"
        app:layout_constraintStart_toStartOf="@+id/insurance_text"
        app:layout_constraintTop_toBottomOf="@+id/insurance_text" />

    <RadioGroup
        android:id="@+id/discount_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/insurance_question"
        app:layout_constraintStart_toStartOf="@+id/insurance_question"
        >

        <RadioButton
            android:id="@+id/three_years"
            android:text="@string/three_years"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/two_years"
            android:text="@string/two_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/one_year"
            android:text="@string/one_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_switch_round_up"
        android:importantForAccessibility="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_switch_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_up_switch"
        app:layout_constraintBottom_toBottomOf="@+id/round_up_switch">
    </ImageView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="325dp"
        android:layout_height="34dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/round_up_amount"
        app:layout_constraintStart_toStartOf="@+id/discount_option"
        app:layout_constraintTop_toBottomOf="@+id/discount_option"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@+id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch"
        app:layout_constraintWidth="match_parent" />

    <TextView
        android:id="@+id/amount_insurance_result"
        style="@style/Widget.InsuranceCalculator.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Amount result: $10.00" />


</androidx.constraintlayout.widget.ConstraintLayout>